# AgentARC

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
agentarc/: __init__.py  __main__.py  events.py  llm_judge.py  policy_engine.py  wallet_wrapper.py
agentarc/analysis/: __init__.py  llm_judge.py
agentarc/cli/: __init__.py  wizard.py
agentarc/cli/templates/: __init__.py  agent_cdp_langchain.py.template  agent_cdp_openai.py.template  agent_eoa_langchain.py.template  agent_eoa_openai.py.template  agent_erc4337_langchain.py.template  agent_erc4337_openai.py.template  agent_safe_langchain.py.template  agent_safe_openai.py.template  env_cdp.template  env_eoa.template  env_erc4337.template  env_safe.template
agentarc/compat/: __init__.py  wallet_wrapper.py
agentarc/core/: __init__.py  config.py  errors.py  events.py  interfaces.py  types.py
agentarc/engine/: __init__.py  context.py  factory.py  legacy.py  pipeline.py  policy_engine.py
agentarc/engine/stages/: __init__.py  honeypot.py  intent.py  llm.py  policy.py  simulation.py
agentarc/events/: __init__.py
agentarc/frameworks/: __init__.py  agentkit.py  base.py  langchain.py  openai_sdk.py
agentarc/log/: __init__.py
agentarc/parsers/: __init__.py
agentarc/rules/: validators.py
agentarc/simulators/: __init__.py  tenderly.py
agentarc/validators/: __init__.py  base.py  registry.py
agentarc/validators/builtin/: __init__.py  address.py  functions.py  gas.py  limits.py
agentarc/wallets/: __init__.py  base.py  factory.py  policy_wallet.py
agentarc/wallets/adapters/: __init__.py  cdp.py  erc4337.py  mnemonic.py  private_key.py  safe_adapter.py  smart_wallet_base.py
agentguard/: __init__.py  __main__.py  logger.py  policy_engine.py
agentguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/autonomous-portfolio-agent/: .env.example  .gitignore  HONEYPOT_DEMO.md  README.md  SETUP_GUIDE.md  autonomous_agent.py  block_address_from_selling.py  demo_runner.py  pyproject.toml  requirements.txt  setup_honeypot_pool.py  transfer_from_sender.py  transfer_honeypot_tokens.py  transfer_with_cdp_wallet.py
examples/autonomous-portfolio-agent/action_providers/: portfolio_actions.py  uniswap_actions.py
examples/autonomous-portfolio-agent/config/: policy.yaml  portfolio_config.py
examples/autonomous-portfolio-agent/core/: agent.py  metrics_logger.py
examples/basic-chat-agent/: .env.example  .gitignore  README.md  approval_test_actions.py  chatbot.py  graph.py  honeypot_test_actions.py  initialize_agent.py  langchain_chat_agent.py  langgraph.json  openai_chat_agent.py  policy.yaml  pyproject.toml  requirements.txt  server.py  setup.py  start-server.sh
examples/basic-chat-agent/docs/: AGENTARC_SETUP.md  HONEYPOT_TESTING_GUIDE.md  TEST_PROMPTS.md
examples/basic-chat-agent/frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
examples/basic-chat-agent/frontend/app/: globals.css  layout.tsx  page.tsx
examples/basic-chat-agent/frontend/app/api/chat/: route.ts
examples/basic-chat-agent/frontend/app/api/sentiment/: route.ts
examples/basic-chat-agent/frontend/app/api/test-paid/: route.ts
examples/basic-chat-agent/frontend/components/: ValidationEvents.tsx  logo.tsx
examples/basic-chat-agent/frontend/components/ai-elements/: conversation.tsx  message.tsx  tool.tsx
examples/basic-chat-agent/frontend/components/ui/: badge.tsx  command.tsx  input-group.tsx
examples/basic-chat-agent/frontend/lib/: types.ts
examples/onchain-agent/: .env.example  README.md  initialize_agent.py  policy.yaml  pyproject.toml  requirements.txt
examples/onchain-agent/docs/: AGENTGUARD_SETUP.md  HONEYPOT_TESTING_GUIDE.md
examples/smart-wallet-agents/: .env.example  README.md  erc4337_agent.py  policy.yaml  safe_agent.py
examples/test-1/: initialize_agent.py  policy.yaml
tests/: README_LLM_TESTS.md  __init__.py  conftest.py  policy_v2.yaml  quick_test_llm.py  test_approval_integration.py  test_cli_setup.py  test_complete_system.py  test_fix.py  test_llm_judge.py  test_llm_patterns.py  test_smart_wallets.py
tests/contracts/: deployments.json  honeypot-deployment.txt
tests/contracts/script/: DeployContracts.s.sol  DeployHoneypot.s.sol
tests/contracts/src/: ApprovalPhishing.sol  HoneypotToken.sol  IERC20.sol  MaliciousSpender.sol  MockERC20.sol  WhitelistedContract.sol
tests/contracts/test/: ApprovalAttacks.t.sol  HoneypotToken.t.sol
