[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "Advanced policy enforcement layer for AI agents with 3-stage validation, transaction simulation, and security controls"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "BuildBear Labs", email = "support@buildbear.io"}
]
keywords = ["agent", "security", "policy", "blockchain", "ai", "validation", "agentkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0.0",
    "web3>=6.0.0",
    "eth-abi>=4.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
agentkit = [
    "coinbase-agentkit>=0.1.0",
    "web3>=6.0.0",
    "eth-abi>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentguard = "agentguard.__main__:cli"

[project.urls]
Homepage = "https://github.com/BuildBearLabs/agentguard"
Repository = "https://github.com/BuildBearLabs/agentguard"
Issues = "https://github.com/BuildBearLabs/agentguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentguard*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
